<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/custName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etCustName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/custNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/number"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etCustNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.55"
                    android:text="@string/size"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />

                <CheckBox
                    android:id="@+id/checkSmoke"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/smoke" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/editTextDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/clickDay"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/clickTime"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnBook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reserve" />

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
